--- a/views/jobs/show.ejs
+++ b/views/jobs/show.ejs
@@ -2,7 +2,7 @@
 
     <div class="container mt-5">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-sm-12 col-md-6">
                 <div id="JobCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner ">
                         <% job.images.forEach((img,i)=>{ %>
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-12 col-sm-12 col-md-6">
                 <div id='map'></div>
                 <% if(!currentUser){%>
                     <div>
